[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
arrayvec = "0.7.2"
lazysort = "0.2.1"
itertools = "0.10.3"
slab = "0.4.7"
indoc = "1.0.7"
rustc-hash = "1.1.0"
num = "0.4.0"
rayon = "1.6"
regex = "1.7.0"
range_union_find = "0.4.3"
lazy_static = "1.4.0"
strum = "0.24"
strum_macros = "0.24"
# some dependencies that will probably be used later
#bytelines = "2.4.0"
#pathfinding = "3.0.5"
