[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[features]
io = []

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
arrayvec = "0.7.2"
lazysort = "0.2.1"
itertools = "0.10.5"
slab = "0.4.8"
indoc = "2.0.1"
rustc-hash = "1.1.0"
num = "0.4.0"
rayon = "1.7.0"
regex = "1.8.1"
range_union_find = "0.4.4"
lazy_static = "1.4.0"
strum = "0.24.1"
strum_macros = "0.24.3"
nom = "7.1.3"
# some dependencies that will probably be used later
#bytelines = "2.4.0"
#pathfinding = "3.0.5"
